--- a/ww_crm/templates/base.html
+++ b/ww_crm/templates/base.html
@@ -116,16 +116,16 @@
     </style>
 </head>
 <body>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/customers">Customers</a>
-        <a href="/invoices">Invoices</a>
+    <nav id="main-nav">
+        <a href="/" id="nav-home">Home</a>
+        <a href="/customers" id="nav-customers">Customers</a>
+        <a href="/invoices" id="nav-invoices">Invoices</a>
     </nav>
 
-    <div class="container">
+    <div class="container" id="main-content">
         {% block content %}
-        <h1>Welcome to Window Wash CRM</h1>
-        <p>Select an option from the menu above to get started.</p>
+        <h1 id="welcome-heading">Welcome to Window Wash CRM</h1>
+        <p id="welcome-message">Select an option from the menu above to get started.</p>
         {% endblock %}
     </div>
 
