--- a/ww_crm/templates/customers/list.html
+++ b/ww_crm/templates/customers/list.html
@@ -16,7 +16,7 @@
             <th id="col-email">Email</th>
             <th id="col-address">Address</th>
             <th id="col-building-type">Building Type</th>
-            <th id="col-window-count">Window Count</th>
+            <th id="col-service-units">{{ settings.service_unit_name|title }} Count</th>
             <th id="col-actions">Actions</th>
         </tr>
     </thead>
@@ -28,7 +28,7 @@
             <td class="customer-email">{{ customer.email }}</td>
             <td class="customer-address">{{ customer.address }}</td>
             <td class="customer-building-type">{{ customer.building_type }}</td>
-            <td class="customer-window-count">{{ customer.window_count }}</td>
+            <td class="customer-service-units">{{ customer.service_units }}</td>
             <td class="customer-actions">
                 <a href="/customers/{{ customer.id }}" class="btn" id="btn-view-customer-{{ customer.id }}">View</a>
                 <a href="#" class="btn btn-danger" id="btn-delete-customer-{{ customer.id }}"
